commit in vs code

--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>hello world</h1>
+    <img src="https://picsum.photos/id/112/600/400" alt="">
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, iste ea at culpa unde quaerat. Repellat excepturi, exercitationem tempore adipisci quia molestias nulla, officiis veniam aperiam est eaque sint maiores.</p>
 </body>
 </html>
