--- a/01_first.html
+++ b/01_first.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>최건호</title>
     <style>
-        h1
-        {
+        h1 {
             color: red;
         }
-        p{
+
+        p {
             background-color: rgb(63, 55, 143);
         }
     </style>
 </head>
+
 <body>
-    <h1>최건호adfadf</h1>
-    <p>Hello</p>
+    <h1>최건호 입니다.</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim, maiores quia iste a est ab cum molestias perspiciatis saepe nulla! Maiores possimus dolorum autem excepturi doloremque aliquid atque aliquam placeat?</p>
 </body>
+
 </html>
