--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>최건호</title>
+    <style>
+        h1 {
+            color: red;
+        }
+
+        p {
+            background-color: rgb(63, 55, 143);
+        }
+    </style>
 </head>
+
 <body>
-    <h1>hello world</h1>
-    <img src="https://picsum.photos/id/112/600/400" alt="">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, iste ea at culpa unde quaerat. Repellat excepturi, exercitationem tempore adipisci quia molestias nulla, officiis veniam aperiam est eaque sint maiores.</p>
+    <h1>최건호 입니다.</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim, maiores quia iste a est ab cum molestias perspiciatis saepe nulla! Maiores possimus dolorum autem excepturi doloremque aliquid atque aliquam placeat?</p>
 </body>
+
 </html>
