--- a/index.html
+++ b/index.html
@@ -6,21 +6,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>최건호</title>
     <style>
+        body {
+            background: no-repeat url("background-paper.jpg");
+            background-size: cover;
+        }
         h1 {
             color: red;
         }
 
         p {
-            background-color: rgb(63, 55, 143);
+            /* background-color: rgb(63, 55, 143); */
+        }
+        a{
+            text-decoration: none;
+        }
+        #naver{
+            color: green;
+        }
+        #daum{
+            color: crimson;
         }
     </style>
 </head>
 
 <body>
     <h1>최건호 입니다.</h1>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim, maiores quia iste a est ab cum molestias perspiciatis saepe nulla! Maiores possimus dolorum autem excepturi doloremque aliquid atque aliquam placeat?</p>
+    <p>주니어 개발자</p>
     <a href="01_first.html">내가 만든 페이지</a>
-
+    
+    <a id="naver" href="http://naver.com">네이버</a>
+    <h2>C언어 기반 프로젝트</h2>
+    <h3>데이터 분석을 통한 확률 프로그램</h3>
+    <img src="lotto.png" alt="">
 </body>
 
 </html>
