--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
     <h1>최건호 입니다.</h1>
     <p>주니어 개발자</p>
-    <a href="01_first.html">내가 만든 페이지</a>
+    <a href="http://3.34.1.28/todoApp/">내가 만든 페이지</a>
     
     <a id="naver" href="http://naver.com">네이버</a>
     <h2>C언어 기반 프로젝트</h2>
