--- a/youtube/index.html
+++ b/youtube/index.html
@@ -82,9 +82,9 @@
         <!-- Channel description -->
         <div class="channel">
           <div class="metadata">
-            <img src="image/avatar.png" alt="" />
+            <img src="image/avatar.jpg" alt="" />
             <div class="info">
-              <span class="name">드림코딩 by 엘리</span>
+              <span class="name">건호 TV</span>
               <span class="subscribers">1M subcribers</span>
             </div>
           </div>
@@ -97,7 +97,7 @@
         <span class="title">Up next</span>
         <ul>
           <li class="item">
-            <div class="img"><img src="image/1.png" alt="" /></div>
+            <div class="img"><img src="image/1.jpg" alt="" /></div>
             <div class="itemInfo">
               <span class="title"
                 >프론트엔드 강의, 프론트엔드 개발자가 되고 싶다면? 웹개발
