--- a/youtube/index.html
+++ b/youtube/index.html
@@ -90,7 +90,7 @@
       <span class="title">Up next</span>
       <ul>
         <li class="item">
-          <div class="img"> <video loop onmouseover="this.play()" onmouseout="this.pause();" src="video/salad.mp4"></video>
+          <div class="img"> <video loop muted onmouseover="this.play()" onmouseout="this.pause();" src="video/salad.mp4"></video>
           </div>
           <div class="itemInfo">
             <span class="title">3가지 다이어트 샐러드 만들기, 3 HEALTHY SALAD RECIPES</span>
@@ -100,7 +100,7 @@
           <button class="moreBtn"><i class="fas fa-ellipsis-v"></i></button>
         </li>
         <li class="item">
-          <div class="img"><video loop onmouseover="this.play()" onmouseout="this.pause();" src="video/video.mp4">
+          <div class="img"><video loop muted onmouseover="this.play()" onmouseout="this.pause();" src="video/video.mp4">
             <!-- <source src="https://media.w3.org/2010/05/sintel/trailer.mp4"> -->
           </video></div>
           <div class="itemInfo">
