edit click event

--- a/youtube/index.html
+++ b/youtube/index.html
@@ -42,7 +42,7 @@
           <li>#CSS</li>
         </ul>
         <div class="titleAndButton">
-          <span class="title clamp">유튜브 모바일 웹사이트 따라 만들기
+          <span class="title clamp">유튜브 모바일 웹사이트 따라 만들기 // 유튜브 모바일 웹사이트 따라 만들기 // 유튜브 모바일 웹사이트 따라 만들기
           </span>
           <button class="moreBtn">
             <i class="fas fa-caret-down"></i>
@@ -54,7 +54,7 @@
       <ul class="actions">
         <li>
           <button>
-            <i class="active fas fa-thumbs-up"></i><span>1K</span>
+            <i class="fas fa-thumbs-up active"></i><span>1K</span>
           </button>
         </li>
         <li>
