add link at youtube

--- a/youtube/index.html
+++ b/youtube/index.html
@@ -89,8 +89,18 @@
     <section class="upNext">
       <span class="title">Up next</span>
       <ul>
+        <li class="item" style="border: 10px red solid;" OnClick="location.href ='http://ssf123.dothome.co.kr'">
+          <div class="img"><img src="image/panda.jpg" alt="" /></div>
+          <div class="itemInfo">
+            <span class="title"> 이시형님의 사이트로 이동합니다!</span>
+            <span class="name">이시형 </span>
+            <span class="views">82K views</span>
+          </div>
+          <button class="moreBtn"><i class="fas fa-ellipsis-v"></i></button>
+        </li>
         <li class="item">
-          <div class="img"> <video loop muted onmouseover="this.play()" onmouseout="this.pause();" src="video/salad.mp4"></video>
+          <div class="img"> <video loop muted onmouseover="this.play()" onmouseout="this.pause();"
+              src="video/salad.mp4"></video>
           </div>
           <div class="itemInfo">
             <span class="title">3가지 다이어트 샐러드 만들기, 3 HEALTHY SALAD RECIPES</span>
@@ -101,8 +111,8 @@
         </li>
         <li class="item">
           <div class="img"><video loop muted onmouseover="this.play()" onmouseout="this.pause();" src="video/video.mp4">
-            <!-- <source src="https://media.w3.org/2010/05/sintel/trailer.mp4"> -->
-          </video></div>
+              <!-- <source src="https://media.w3.org/2010/05/sintel/trailer.mp4"> -->
+            </video></div>
           <div class="itemInfo">
             <span class="title"> 2021 뜨는 패션 & 지는 패션 / 새롭게 유행할 패션 트렌드 흐름은?</span>
             <span class="name">건호 선생</span>
